Fix SSRF and local file read in /api/getexternalpage.json
ExternalPageController fetched any URL supplied via the sourceURL
parameter with no validation, allowing file:// reads (e.g.
file:///etc/passwd, application.properties), access to loopback and
link-local services (e.g. the cloud metadata endpoint at
169.254.169.254), and requests into the internal network. This is the
gap left when CVE-2024-41668 only hardened the /proxy endpoint.

Restrict fetches to http/https, add an optional hostname allowlist
(external_page.allowed_hosts), and reject any URL whose host resolves to
a loopback, any-local, link-local, site-local (private), or multicast
address. All resolved addresses are checked, not just the first.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SFYJEaFjubT5sJiUaVB8rs